--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "prisma": "^5.13.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "uuid": "^9.0.1",
     "winston": "^3.13.0"
   },
   "devDependencies": {
@@ -46,6 +47,7 @@
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
     "@types/supertest": "^2.0.11",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
