--- a/docker/docker-compose-test.yml
+++ b/docker/docker-compose-test.yml
@@ -11,20 +11,20 @@ version: '3.8'
 # Networks
 #----------------------------------------------------------------------
 networks:
-  tech-challenge-net:
+  tech-challenge-net-test:
     driver: bridge
 #----------------------------------------------------------------------
 # Volumes
 #----------------------------------------------------------------------
 volumes:
-  tech-challenge-db-data: {}
+  tech-challenge-db-data-test: {}
 #----------------------------------------------------------------------
 # Services:
 #----------------------------------------------------------------------
 services:
-  tech-challenge:
+  tech-challenge-test:
     image: node:16-bullseye
-    container_name: tech-challenge
+    container_name: tech-challenge-test
     working_dir: /usr/src/app
     command: /usr/src/app/docker/docker-run-test.sh
     user: '${DUID}:${DGID}'
@@ -33,19 +33,19 @@ services:
     ports:
       - '3000:3000'
     networks:
-      - tech-challenge-net
+      - tech-challenge-net-test
     env_file:
-      - ./dev-local.env
+      - ./test-local.env
     depends_on:
-      - tech-challenge-db
-  tech-challenge-db:
+      - tech-challenge-db-test
+  tech-challenge-db-test:
     image: postgres:latest
-    container_name: tech-challenge-db
+    container_name: tech-challenge-db-test
     ports:
-      - 5432:5432
+      - 5433:5432
     networks:
-      - tech-challenge-net
+      - tech-challenge-net-test
     env_file:
-      - ./dev-local.env
+      - ./test-local.env
     volumes:
-      - tech-challenge-db-data:/var/lib/postgresql/data
+      - tech-challenge-db-data-test:/var/lib/postgresql/data
