--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@prisma/client": "^5.13.0",
     "@types/node": "^20.2.5",
     "@types/sqlite3": "^3.1.8",
+    "prisma": "^5.13.0",
     "rimraf": "^5.0.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
@@ -20,9 +22,13 @@
   "dependencies": {
     "@types/express": "^4.17.17",
     "body-parser": "^1.20.2",
+    "decimal.js": "^10.4.3",
     "express": "^4.18.2",
     "sqlite": "^4.2.1",
     "sqlite3": "^5.1.6",
     "tsconfig-paths": "^4.2.0"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
