--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,21 @@
 {
   "compilerOptions": {
-    "target": "es2016",
     "module": "commonjs",
-    "rootDir": "./src",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true,
+    "declaration": true,
+    "removeComments": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
+    "target": "es2017",
+    "sourceMap": true,
     "outDir": "./dist",
-    "moduleResolution": "node",
-    "baseUrl": ".",
-    "paths": {
-      "@controllers/*": ["./src/controllers/*"],
-      "@interfaces/*": ["./src/interfaces/*"],
-      "@usecases/*": ["./src/usecases/*"],
-      "@usecases": ["./src/usecases/index.ts"],
-      "@entities/*": ["./src/entities/*"],
-      "@external/*": ["./src/external/*"],
-      "@types/*": ["./src/types/"],
-      "@types": ["./src/types/index.ts"],
-      "@gateways/*": ["./src/gateways/"],
-      "@entities": ["./src/entities/index.ts"],
-      "@adapters": ["./src/adapters/index.ts"]
-    }
-  },
-  "include": ["src/**/*"]
+    "baseUrl": "./",
+    "incremental": true,
+    "skipLibCheck": true,
+    "strictNullChecks": false,
+    "noImplicitAny": false,
+    "strictBindCallApply": false,
+    "forceConsistentCasingInFileNames": false,
+    "noFallthroughCasesInSwitch": false
+  }
 }
