wip: implementing clean architecture

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "rimraf dist/ && tsc",
-    "dev": "ts-node-dev -r tsconfig-paths/register src/index.ts"
+    "start:dev": "ts-node-dev -r tsconfig-paths/register src/index.ts"
   },
   "author": "",
   "license": "ISC",
