--- a/docker/dev-local.env
+++ b/docker/dev-local.env
@@ -9,4 +9,4 @@ DATABASE_URL=postgresql://test:test@tech-challenge-db:5432/development?schema=pu
 POSTGRES_PASSWORD=test
 POSTGRES_USER=test
 POSTGRES_DB=development
-ACCESS_TOKEN=APP_USR-3004224115322755-070715-8461c4201118718ee1c6ba5b75104497-77730822
+ACCESS_TOKEN=TOKEN
