--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "rimraf dist/ && tsc",
-    "dev": "ts-node-dev -r tsconfig-paths/register src/index.ts"
+    "dev": "ts-node-dev -r tsconfig-paths/register src/index.ts",
+    "start:dev": "ts-node-dev -r tsconfig-paths/register src/index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -23,10 +24,13 @@
     "@types/express": "^4.17.17",
     "body-parser": "^1.20.2",
     "decimal.js": "^10.4.3",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "mercadopago": "^2.0.11",
     "sqlite": "^4.2.1",
     "sqlite3": "^5.1.6",
-    "tsconfig-paths": "^4.2.0"
+    "tsconfig-paths": "^4.2.0",
+    "uuid": "^10.0.0"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
