--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^5.13.0",
     "@types/node": "^20.2.5",
     "@types/sqlite3": "^3.1.8",
+    "@types/uuid": "^10.0.0",
     "prisma": "^5.13.0",
     "rimraf": "^5.0.1",
     "ts-node": "^10.9.1",
@@ -23,10 +24,13 @@
     "@types/express": "^4.17.17",
     "body-parser": "^1.20.2",
     "decimal.js": "^10.4.3",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "mercadopago": "^2.0.11",
     "sqlite": "^4.2.1",
     "sqlite3": "^5.1.6",
-    "tsconfig-paths": "^4.2.0"
+    "tsconfig-paths": "^4.2.0",
+    "uuid": "^10.0.0"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
