--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "rimraf dist/ && tsc",
+    "swagger": "node ./src/api/swagger.ts",
     "start:dev": "ts-node-dev -r tsconfig-paths/register src/index.ts"
   },
   "author": "",
@@ -29,6 +30,8 @@
     "mercadopago": "^2.0.11",
     "sqlite": "^4.2.1",
     "sqlite3": "^5.1.6",
+    "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^5.0.1",
     "tsconfig-paths": "^4.2.0",
     "uuid": "^10.0.0"
   },
