--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "body-parser": "^1.20.2",
     "decimal.js": "^10.4.3",
     "dotenv": "^16.4.5",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "mercadopago": "^2.0.11",
+    "prom-client": "^15.1.3",
     "sqlite": "^4.2.1",
     "sqlite3": "^5.1.6",
     "tsconfig-paths": "^4.2.0",
