--- a/infra/deployment/api/3-api-deployment.yaml
+++ b/infra/deployment/api/3-api-deployment.yaml
@@ -14,13 +14,27 @@ spec:
     spec:
       containers:
       - name: tech-challenge-7soat-api
-        image: 839260668425.dkr.ecr.us-east-1.amazonaws.com/tech-challenge-7soat-ecr-api:tech-challenge-7soat-api-240721051651
+        image: 839260668425.dkr.ecr.us-east-1.amazonaws.com/tech-challenge-7soat-ecr-api:tech-challenge-7soat-api-240728092144
         resources:
           limits:
               memory: "256Mi"
               cpu: "500m"
         ports:
           - containerPort: 3000
+            name: http
         envFrom:
             - secretRef:
                 name: tech-challenge-7soat-api-external-secret
+        readinessProbe:
+          httpGet:
+            path: /metrics
+            port: 3000
+          initialDelaySeconds: 5
+          periodSeconds: 15
+          failureThreshold: 3
+        livenessProbe:
+          httpGet:
+            path: /metrics
+            port: 3000
+          initialDelaySeconds: 20
+          periodSeconds: 30
