--- a/infra/deployment/api/6-api-service-cluster-ip.yaml
+++ b/infra/deployment/api/6-api-service-cluster-ip.yaml
@@ -1,9 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: tech-challenge-7soat-api-alb
-  annotations:
-    service.beta.kubernetes.io/aws-load-balancer-type: "alb"
+  name: tech-challenge-7soat-api-cluster-ip
 spec:
   selector:
     app: tech-challenge-7soat-api
@@ -11,4 +9,4 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 3000
-  type: LoadBalancer
+  type: ClusterIP
