infra: update documentation

--- a/infra/deployment/api/2-api-secrets.yaml
+++ b/infra/deployment/api/2-api-secrets.yaml
@@ -13,15 +13,15 @@ spec:
     remoteRef:
       key: 7Soat
       property: DATABASE_URL
-  - secretKey: POSTGRES_PASSWORD
+  - secretKey: MERCADO_PAGO_ACCESS_TOKEN
     remoteRef:
       key: 7Soat
-      property: POSTGRES_PASSWORD
-  - secretKey: POSTGRES_USER
+      property: MERCADO_PAGO_ACCESS_TOKEN
+  - secretKey: MERCADO_PAGO_SECRET
     remoteRef:
       key: 7Soat
-      property: POSTGRES_USER
-  - secretKey: POSTGRES_DB
+      property: MERCADO_PAGO_SECRET
+  - secretKey: PAYMENT_TIMEOUT
     remoteRef:
       key: 7Soat
-      property: POSTGRES_DB
+      property: PAYMENT_TIMEOUT
