--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
       run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
     - name: Build the Docker image
-      run: docker build -t ${{env.REPO_NAME}}:latest ./docker
+      run: docker build -t ${{env.REPO_NAME}}:latest .
     - name: Push to DockerHub
       run: docker push ${{env.REPO_NAME}}:latest
   deploy:
