--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,4 +47,6 @@ jobs:
       - name: Pulling Docker Image
         run: sudo docker pull ${{env.REPO_NAME}}:latest
       - name: Starting Docker Container
-        run: sudo docker run -d -p 3000:3000 --name tech-challenge-7soat-server ${{env.REPO_NAME}}:latest
+        run: sudo docker run -d -p 3000:3000 --name tech-challenge-7soat-server \ 
+          -e DATABASE_URL=${{secrets.DATABASE_URL}}
+          ${{env.REPO_NAME}}:latest
