--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,5 +48,5 @@ jobs:
         run: sudo docker pull ${{env.REPO_NAME}}:latest
       - name: Starting Docker Container
         run: sudo docker run -d -p 3000:3000 --name tech-challenge-7soat-server \ 
-          -e DATABASE_URL=${{secrets.DATABASE_URL}}
+          -e DATABASE_URL=${{secrets.DATABASE_URL}} \
           ${{env.REPO_NAME}}:latest
