--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     name: Sonar
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0 
       - uses: sonarsource/sonarqube-scan-action@master
@@ -47,6 +47,7 @@ jobs:
       - name: Pulling Docker Image
         run: sudo docker pull ${{env.REPO_NAME}}:latest
       - name: Starting Docker Container
-        run: sudo docker run -d -p 3000:3000 --name tech-challenge-7soat-server \ 
-          -e DATABASE_URL=${{secrets.DATABASE_URL}} \
-          ${{env.REPO_NAME}}:latest
+        run: |
+          sudo docker run -d -p 3000:3000 --name tech-challenge-7soat-server \
+            -e DATABASE_URL=${{ secrets.DATABASE_URL }} \
+            ${{ env.REPO_NAME }}:latest
