--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "@types/express": "^4.17.17",
     "@types/express-prometheus-middleware": "^1.2.3",
     "add": "^2.0.6",
+    "axios": "^1.7.7",
     "body-parser": "^1.20.2",
     "copyfiles": "^2.4.1",
     "decimal.js": "^10.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-prometheus-middleware": "^1.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.1.0",
     "mercadopago": "^2.0.11",
     "prom-client": "^15.1.3",
     "sqlite": "^4.2.1",
