--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
   #   - name: Push to DockerHub
   #     run: docker push ${{env.REPO_NAME}}:latest
   build-and-push:
-  needs: sonar
+  #needs: sonar
   name: Build Image
   runs-on: ubuntu-latest
   steps:
