--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -11,11 +11,15 @@ COPY prisma/ prisma/
 COPY src/ src/
 COPY docker/docker-entrypoint.sh docker-entrypoint.sh
 
-# Building your code for production
+RUN apk add --no-cache python3 make g++ zip
+
+
 RUN apk add git
 RUN yarn install
+
 # RUN npx prisma generate
+
 RUN yarn build
 EXPOSE ${SERVICE_PORT}
 
-ENTRYPOINT ["sh", "/usr/src/app/docker-entrypoint.sh"]
+ENTRYPOINT ["sh", "/usr/src/app/docker-entrypoint.sh"] 
