--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,8 +40,8 @@ jobs:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY:  tech-challenge-7soat-ecr-api
         LATEST_TAG: latest
-        BUILD_VERSION_TAG: $(date +%Y-%m-%d-%I_%M_%S_utc)
       run: |
+        export BUILD_VERSION_TAG=$(date +%Y-%m-%d-%I_%M_%S_utc)
         docker build -f docker/Dockerfile -t "service-$BUILD_VERSION_TAG" .
         docker tag "service-$BUILD_VERSION_TAG:latest" "$ECR_REGISTRY/$ECR_REPOSITORY:service-$BUILD_VERSION_TAG" && docker push "$ECR_REGISTRY/$ECR_REPOSITORY:service-$BUILD_VERSION_TAG"
         docker tag "service-$BUILD_VERSION_TAG:latest" "$ECR_REGISTRY/$ECR_REPOSITORY:service-$LATEST_TAG" && docker push "$ECR_REGISTRY/$ECR_REPOSITORY:service-$LATEST_TAG"
