feat: git actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
         export BUILD_VERSION_TAG=$(date +%Y-%m-%d-%I_%M_%S_utc)
         docker build -f docker/Dockerfile -t "service-$BUILD_VERSION_TAG" .
         docker tag "service-$BUILD_VERSION_TAG:latest" "$ECR_REGISTRY/$ECR_REPOSITORY:service-$BUILD_VERSION_TAG" && docker push "$ECR_REGISTRY/$ECR_REPOSITORY:service-$BUILD_VERSION_TAG"
-        docker tag "service-$BUILD_VERSION_TAG:latest" "$ECR_REGISTRY/$ECR_REPOSITORY:service-$LATEST_TAG" && docker push "$ECR_REGISTRY/$ECR_REPOSITORY:service-$LATEST_TAG"
+        docker tag "service-$BUILD_VERSION_TAG:latest" "$ECR_REGISTRY/$ECR_REPOSITORY:$LATEST_TAG" && docker push "$ECR_REGISTRY/$ECR_REPOSITORY:$LATEST_TAG"
 
 
 
