--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,10 +48,13 @@ jobs:
     
     
     
-    # - name: Install EKSCTL
-    #   run: |
-    #     curl --silent --location "https://github.com/weaveworks/eksctl/releases/download/latest_release/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
-    #     sudo mv /tmp/eksctl /usr/local/bin
+    - name: Install eksctl
+      run: |
+          ARCH=amd64
+          PLATFORM=$(uname -s)_$ARCH 
+          curl -sLO "https://github.com/eksctl-io/eksctl/releases/latest/download/eksctl_$PLATFORM.tar.gz"
+          tar -xzf eksctl_$PLATFORM.tar.gz -C /tmp && rm eksctl_$PLATFORM.tar.gz
+          sudo mv /tmp/eksctl /usr/local/bin
 
     - name: Update EKS deployment with new image
       env:
@@ -61,7 +64,7 @@ jobs:
         CLUSTER_NAME: tech-challenge-7soat
         IMAGE_TAG: latest
       run: |
-          aws eks update-kubeconfig --name $EKS_CLUSTER_NAME --region $AWS_REGION
+          eksctl utils write-kubeconfig --cluster=$CLUSTER_NAME --region=secrets.AWS_ECR_REGION
           kubectl rollout restart deployment/$DEPLOYMENT_NAME 
           kubectl set image deployment/$DEPLOYMENT_NAME $CLUSTER_NAME=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG 
 
